# test-images

./: README.md  test.yaml
.github/workflows/: action-push.yml
go-server/: Dockerfile  README.md  go.mod  go.sum  main.go
go-statfs/: Dockerfile  go.mod  main.go
http-keep-alive/: Cargo.toml  Dockerfile
http-keep-alive/src/: main.rs
http-log-requester/: Dockerfile  README.md  send_reqs.sh
http-logger/: Dockerfile  README.md  http_logger.py
kafka-consumer/: .dockerignore  Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
kafka-consumer/gradle/wrapper/: gradle-wrapper.properties
kafka-consumer/k8s_examples/: consumer-standard.yaml  consumer-streams.yaml  producer.yaml
kafka-consumer/src/main/kotlin/: Consumer.kt  Main.kt  Producer.kt  TopicConfig.kt
kafka-consumer/src/main/kotlin/consumer/: Configuration.kt
kafka-consumer/src/main/kotlin/producer/: Configuration.kt
kafka-consumer/src/main/resources/: logback.xml
node/: Dockerfile  app.js
node-udp-logger/: Dockerfile  app.mjs
python/: .dockerignore  Dockerfile  app.py  app.yaml  file.local  file.not-found  file.read-only  file.read-write
sqs-forwarder/: Cargo.toml  Dockerfile  README.md
sqs-forwarder/src/: config.rs  main.rs
tcp-echo/: Dockerfile  app.js
unix-socket-server/: Cargo.toml  Dockerfile
unix-socket-server/src/: main.rs
websocket/: Dockerfile  app.mjs
