[package]
name = "sqs-forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.2"
aws-sdk-sqs = { version = "1.10.0" , features = ["behavior-version-latest"]}
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }