[package]
name = "sqs-forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.37" }
tokio = { version = "1.39", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.86"